[tool.poetry]
name = "get-papers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "get_papers" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
typer = "^0.12.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[tool.poetry.scripts]
get-papers-list = "get_papers.cli:app"

